[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "inkpdf2svg"
version = "0.0.1"
description = "Use inkscape to convert pdfs to svgs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Gayoso"},
]
maintainers = [
    {name = "Adam Gayoso", email = "adamgayoso@gmail.com"},
]
urls.Documentation = "https://github.com/adamgayoso/inkpdf2svg"
urls.Source = "https://github.com/adamgayoso/inkpdf2svg"
urls.Home-page = "https://github.com/adamgayoso/inkpdf2svg"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "twine>=4.0.2"
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
inkpdf2svg = "inkpdf2svg:convert"

[tool.coverage.run]
source = ["inkpdf2svg"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
